fix gaps on the main page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,7 @@
   width: 90%;
   display: grid;
   align-items: center;
-  gap: 24px;
+  row-gap: 24px;
   margin-bottom: 48px;
 
   >h1 {
@@ -183,7 +183,7 @@
   display: grid;
   place-items: center;
   margin-top: 48px;
-  gap: 48px;
+  row-gap: 48px;
 }
 
 .values_card {
@@ -192,7 +192,7 @@
   display: grid;
   width: 80%;
   color: white;
-  gap: 20px;
+  row-gap: 20px;
   border-bottom: 0.5px solid white;
   padding-bottom: 30px;
 
@@ -219,7 +219,7 @@
   margin-top: 48px;
   width: 90%;
   display: grid;
-  gap: 20px;
+  row-gap: 20px;
   margin-bottom: 48px;
 
   >div {
@@ -247,7 +247,6 @@
   background-color: #d7d7d7;
   width: 100%;
   display: grid;
-  row-gap: 30px;
   place-items: center;
   background-image: url(/images/bread-bg-portrait.jpeg);
   background-repeat: no-repeat;
